cmake_minimum_required(VERSION 3.7)
set(PROJECT_NAME analog_digital_clock)

project(${PROJECT_NAME})
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14 -static")

set(CMAKE_CXX_STANDARD 14)

set(SOURCE_FILES Image.cpp Image.h BackgroundGalaga.cpp BackgroundGalaga.h PositionGalaga.h PositionGalaga.cpp StatesGalaga.cpp FontGalaga.cpp FighterJet.cpp FighterJet.h Galaga.cpp Galaga.h Rocket.cpp Rocket.h Rocket.h Gun.cpp Gun.h Alien.cpp Alien.h HitBox.cpp HitBox.h AlienShip.cpp AlienShip.h AnimatedSprite.cpp AnimatedSprite.h DisplayGalaga.cpp GameOver.cpp GameOver.h ButtonGalaga.cpp)

if (CMAKE_BUILD_TYPE STREQUAL "Release")
    add_executable(${PROJECT_NAME} WIN32 ${SOURCE_FILES})
else ()
    add_executable(${PROJECT_NAME} ${SOURCE_FILES})
endif ()

set(SFML_ROOT C:/SFML-2.5.1)
set(SFML_STATIC_LIBRARIES TRUE)

set(CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/cmake_modules")
#set(SFML_DIR C:/SFML/SFML-2.5.1/lib/cmake/SFML)
find_package(SFML  REQUIRED COMPONENTS audio graphics window system)
if (SFML_FOUND)
    include_directories(${SFML_INCLUDE_DIR})
    target_link_libraries(${PROJECT_NAME} ${SFML_LIBRARIES} ${SFML_DEPENDENCIES})
endif ()